--- a/client/package.json
+++ b/client/package.json
@@ -4,14 +4,10 @@
   "private": true,
   "dependencies": {
     "@auth0/auth0-react": "^1.8.0",
-    "@testing-library/jest-dom": "^5.11.6",
-    "@testing-library/react": "^11.2.1",
-    "@testing-library/user-event": "^12.2.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.3.1",
-    "react-scripts": "^5.0.0",
-    "web-vitals": "^0.2.4"
+    "react-scripts": "^5.0.0"
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
