--- a/client/package.json
+++ b/client/package.json
@@ -22,12 +22,13 @@
 		"react-router-dom": "^6.2.1",
 		"react-scripts": "^5.0.0",
 		"react-select": "^5.2.1",
+		"react-toastify": "^8.1.0",
 		"redux": "^4.1.2",
 		"redux-devtools-extension": "^2.13.9",
 		"redux-thunk": "^2.4.1"
 	},
 	"scripts": {
-		"start": "react-scripts start",
+		"start": "react-scripts --openssl-legacy-provider start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
